# om_description

./: README.md  om.urdf
om_urdf/: CMakeLists.txt  README.md  om.urdf.xacro  om_v01.urdf.xacro  package.xml
om_urdf/meshes/stl/: chain_link1.stl  chain_link2.stl  chain_link3.stl  chain_link4.stl  chain_link5.stl  chain_link6.stl  chain_link7.stl  chain_link7_without_grippers.stl  chain_link_grip_l.stl  chain_link_grip_r.stl
