<?xml version="1.0"?>
<package>
  <name>om_urdf</name>
  <version>1.0.0</version>
  <description>Provides URDF files for Moveit! and IKfast plugin</description>
  <author>Gurbannazar Ishangulyyev</author>
  <maintainer email="palwanishan@gmail.com">Gurbannazar Ishangulyyev</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
